--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-  background-image: url('https://esteticadelcodice.it/wp-content/uploads/2018/06/il-prato-fiorito.png');
+  background-image: url('https://mh-2-agenzia-di-stock.panthermedia.net/media/media_detail/0026000000/26067000/~prato-fiorito-colorato-in-estate-con_26067477_detail.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -16,51 +16,145 @@ body{
 
 .main-wrapper{
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255,255,255,0.8);
+  background-color: rgba(255,255,255,0.2);
   width:100%;
   height:100vh;
 }
 
 .container{
-  width:500px;
-  height:500px;
+  width:70vh;
+  height:70vh;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  margin-top: 30px;
-  
+  margin:30px auto;
+  position: relative;
+  z-index:1;
+}
+
+
+.container::before{
+  content:'';
+  background-color: rgba(255,255,255,0.5); 
+  height: 100%;
+  width:100%;
+  z-index:-1;
+  position: absolute;
+  top:0;
+  left:0;
 }
 
 
 button{
-  border-radius: 8px;
-  padding:5px 10px;
+  
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-weight: 500;
+  border-radius: 3px;
+  padding: 0 16px;
+  border-radius: 4px;
+  color: #fff;
+  background: #9555f0;
+  line-height: 1.15;
+  font-size: 14px;
+  height: 36px;
+  word-spacing: 0px;
+  letter-spacing: .0892857143em;
+  text-decoration: none;
+  text-transform: uppercase;
+  min-width: 64px;
+  border: none;
+  text-align: center;
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+
+
+}
+
+button:hover {
+  background: rgb(207, 178, 247);
+  color:#5d3497;
+  box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+}
+
+.btn-newgame{
+  position: absolute;
+  bottom:-50px;
+  left:auto;
+
 }
 
 .square{
-  border:1px solid darkgreen;
+  border:1px solid rgb(218,56,91);
+  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
-  color:darkgreen;
+  color:rgb(116,60,49);
   aspect-ratio: 1 / 1;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 select{
   border-radius: 8px;
   text-align: center;
-  padding: 5px;
+  border: 2px solid #9555f0;
+  border-radius: 8px;
+  text-align: center;
+  padding: 8px 15px;
   margin: 0 20px;
+  color: #5d3497;
+}
+
+h4{
+  color:#5d3497;
+  font-size:140%;
+  background-color: rgba(255,255,255,0.5);
+  padding:0 10px;
+  border-radius: 8px;
 }
 
 .hide{
   display:none;
 }
 
-.square.lightblue{
-  background-color: lightblue;
+.square:hover{
+  cursor: pointer;
+}
+
+.square.purple{
+  background-image: url('../img/flowers-purple.png');
+  color:white;
+}
+.square.orange{
+  background-image: url('../img/flowers-orange.png');
+}
+.square.blue{
+  background-image: url('../img/flowers-blue.png');
+}
+
+.bomb{
+  background-image: url('../img/bomb.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+
+.disable-grid{
+  background-color: rgba(255,255,255,0.05);
+  position: absolute;
+  height:100%;
+  width:100%;
+  left:0;
+  top:0;
 }
 
