--- a/css/style.css
+++ b/css/style.css
@@ -6,27 +6,30 @@
 
 body{
   background-image: url('https://mh-2-agenzia-di-stock.panthermedia.net/media/media_detail/0026000000/26067000/~prato-fiorito-colorato-in-estate-con_26067477_detail.jpg');
+  backdrop-filter:opacity(0.9);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  overflow-y: hidden;
 
 }
 
 
 .main-wrapper{
   display: flex;
+  padding:30px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255,255,255,0.2);
+  background-color: rgba(255,255,255,0.4);
   width:100%;
   height:100vh;
 }
 
 .container{
-  width:70vh;
-  height:70vh;
+  width:80vh;
+  height:80vh;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -34,6 +37,7 @@ body{
   margin:30px auto;
   position: relative;
   z-index:1;
+  background-color: rgba(255,255,255,0.8);
 }
 
 
@@ -50,43 +54,37 @@ body{
 
 
 button{
-  
   display: inline-block;
   outline: none;
   cursor: pointer;
   font-weight: 500;
-  border-radius: 3px;
+  border-radius: 0.8rem;
   padding: 0 16px;
-  border-radius: 4px;
   color: #fff;
   background: #9555f0;
   line-height: 1.15;
-  font-size: 14px;
-  height: 36px;
+  font-size: 115%;
+  height: 40px;
   word-spacing: 0px;
   letter-spacing: .0892857143em;
   text-decoration: none;
   text-transform: uppercase;
-  min-width: 64px;
+  width: 204px;
   border: none;
   text-align: center;
   box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
   transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
-  
-
 
 }
 
-button:hover {
+button:hover, button:disabled {
   background: rgb(207, 178, 247);
   color:#5d3497;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
 }
 
 .btn-newgame{
-  position: absolute;
-  bottom:-50px;
-  left:auto;
+  margin:1.5rem auto;
 
 }
 
@@ -104,22 +102,24 @@ button:hover {
 }
 
 select{
-  border-radius: 8px;
+  border-radius: 0.8rem;
   text-align: center;
   border: 2px solid #9555f0;
-  border-radius: 8px;
   text-align: center;
   padding: 8px 15px;
   margin: 0 20px;
   color: #5d3497;
+  width:180px;
+  font-size:110%;
 }
 
-h4{
+h4:not(.rules h4){
   color:#5d3497;
   font-size:140%;
-  background-color: rgba(255,255,255,0.5);
-  padding:0 10px;
-  border-radius: 8px;
+  background-color: rgba(255,255,255,0.75);
+  padding:10px 20px;
+  border-radius: 0.8rem;
+  margin-top: 1.5rem;;
 }
 
 .hide{
@@ -130,15 +130,66 @@ h4{
   cursor: pointer;
 }
 
+.square-span{
+  background-color: rgba(255,255,255,0.8);
+  border-radius:50%;
+  width:60%;
+  height:60%;
+  margin:0 auto;
+  font-weight: bold;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  content:'';
+  text-align: center;
+  font-size:140%;
+}
+
+.square.flag{
+  background-image: url('../img/flying-flag.png');
+}
+
 .square.purple{
   background-image: url('../img/flowers-purple.png');
-  color:white;
+  color:brown;
 }
 .square.orange{
   background-image: url('../img/flowers-orange.png');
+  color:tomato;
+}
+.square.red{
+  background-image: url('../img/flowers-orange.png');
+  color:brown;
+}
+.square.yellow{
+  background-image: url('../img/flowers-yellow.png');
+  color:orange;
 }
 .square.blue{
   background-image: url('../img/flowers-blue.png');
+  color:navy;
+}
+.square.grass{
+  background-image: url('../img/high-grass.png');
+  color:rgb(1, 46, 1)
+}
+.square.purple span{
+  color:rgb(78, 9, 78);
+}
+.square.orange span{
+  color:tomato;
+}
+.square.blue span{
+  color:navy;
+}
+.square.yellow span{
+  color:darkorange;
+}
+.square.red span{
+  color:brown;
+}
+.square.grass span{
+  color:rgb(14, 71, 14)
 }
 
 .bomb{
@@ -150,11 +201,65 @@ h4{
 
 
 .disable-grid{
-  background-color: rgba(255,255,255,0.05);
+  background-color: rgba(255,255,255,0.01);
   position: absolute;
   height:100%;
   width:100%;
   left:0;
   top:0;
 }
+
+.main-game-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  padding: 50px;
+  width:70%;
+}
+
+.rules{
+  border-radius:0.8rem;
+  background-color: rgba(255,255,255,0.75);
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding:30px;
+  width:22%;
+  text-align: left;
+  height:500px;
+  margin-top:100px;
+}
+
+.rules h5, h4{
+  color:#9555f0;
+  font-size:110%;
+}
+
+.rules img{
+  object-fit: cover;
+  max-height:30px;
+}
+
+.rules p:not(.row){
+  margin-top:1rem;
+  font-size:1.1rem;
+}
+.rules-row p{
+  display:inline-block;
+  margin-left:1rem;
+}
+
+.rules-row{
+  display:flex;
+  align-items: center;
+  margin-top: 1rem;
+}
+.rules h5{
+  margin-top:1.5rem;
+}
+
+#result{
+  text-align: center;
+}
+
+
 
